--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">ABCTestProject</string>
     <string name="logo_desc">logo</string>
     <string name="rules">Whack the moles!\nTap the most moles within 30 seconds and get the maximum score!</string>
+    <string name="time_ends">00:00</string>
 </resources>
